--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.js",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "copy": "gulp",
+    "build": "tsc -p tsconfig.json && npm run copy",
     "test": "jest --config jestconfig.json",
     "lint": "tslint -p tsconfig.json && tsfmt --verify",
     "prepare": "npm run build",
@@ -32,7 +33,7 @@
     "url": "https://github.com/PSNS-IMF/angular-libs/issues"
   },
   "homepage": "https://github.com/PSNS-IMF/angular-libs#readme",
-  "dependencies": {
+  "peerDependencies": {
     "@angular/core": "^7.1.4",
     "rxjs": "^6.0.0"
   },
@@ -46,6 +47,7 @@
     "@types/node": "^8.9.4",
     "codelyzer": "^4.5.0",
     "core-js": "^2.6.2",
+    "gulp": "^4.0.0",
     "jest": "^23.6.0",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
