--- a/package.json
+++ b/package.json
@@ -1,55 +1,51 @@
 {
-  "name": "@psns/angular-libs",
-  "version": "1.0.4",
+  "name": "angular-libs",
+  "version": "0.0.0",
   "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.js",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "test": "jest --config jestconfig.json",
-    "lint": "tslint -p tsconfig.json && tsfmt --verify",
-    "prepublishOnly": "npm run lint",
+    "ng": "ng",
+    "start": "ng serve",
+    "build:lib": "ng-packagr -p projects/environment-banner/package.json",
+    "build": "ng build",
+    "test": "ng test environment-banner",
+    "lint": "ng lint environment-banner && tsfmt --verify",
+    "prepare": "npm run build:lib",
+    "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
-    "version": "git add -A src",
+    "version": "git add -A src test",
     "postversion": "git push && git push --tags"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/PSNS-IMF/angular-libs.git"
-  },
-  "keywords": [
-    "angular",
-    "psns"
-  ],
-  "author": {
-    "name": "japurcell",
-    "email": "japurcell@users.noreply.github.com",
-    "url": "https://github.com/japurcell"
-  },
-  "license": "SEE LICENSE IN LICENSE.md",
-  "bugs": {
-    "url": "https://github.com/PSNS-IMF/angular-libs/issues"
-  },
-  "homepage": "https://github.com/PSNS-IMF/angular-libs#readme",
-  "peerDependencies": {
-    "@angular/core": "^7.1.4",
-    "rxjs": "^6.0.0"
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~7.0.0",
+    "@angular/common": "~7.0.0",
+    "@angular/compiler": "~7.0.0",
+    "@angular/core": "~7.0.0",
+    "@angular/forms": "~7.0.0",
+    "@angular/http": "~7.0.0",
+    "@angular/platform-browser": "~7.0.0",
+    "@angular/platform-browser-dynamic": "~7.0.0",
+    "@angular/router": "~7.0.0",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.3.3",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^7.1.3",
-    "@angular/common": "^7.1.4",
-    "@angular/compiler": "^7.1.4",
-    "@angular/platform-browser": "^7.1.4",
-    "@angular/platform-browser-dynamic": "^7.1.4",
-    "@types/jest": "^23.3.12",
-    "@types/node": "^8.9.4",
+    "@angular-builders/jest": "^7.2.1",
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-ng-packagr": "~0.10.0",
+    "@angular/cli": "~7.0.4",
+    "@angular/compiler-cli": "~7.0.0",
+    "@angular/language-service": "~7.0.0",
+    "@types/node": "~8.9.4",
     "codelyzer": "^4.5.0",
-    "core-js": "^2.6.2",
     "jest": "^23.6.0",
-    "ts-jest": "^23.10.5",
-    "tslint": "^5.12.1",
-    "typescript": "^3.2.2",
-    "typescript-formatter": "^7.2.2",
-    "zone.js": "^0.8.27"
+    "ng-packagr": "^4.2.0",
+    "ts-node": "~7.0.0",
+    "tsickle": ">=0.29.0",
+    "tslib": "^1.9.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.1.1",
+    "typescript-formatter": "^7.2.2"
   }
 }
