--- a/projects/environment-banner/package.json
+++ b/projects/environment-banner/package.json
@@ -24,5 +24,12 @@
   "peerDependencies": {
     "@angular/common": "^7.0.0",
     "@angular/core": "^7.0.0"
+  },
+  "ngPackage": {
+    "$schema": "../../node_modules/ng-packagr/ng-package.schema.json",
+    "dest": "../../dist/angular-libs",
+    "lib": {
+      "entryFile": "src/public_api.ts"
+    }
   }
 }
